package helpdesk.especificacaoservico.domain.catalogo;

public class CatalogoDTO {
}
