package helpdesk.especificacaoservico.domain.servico;

public class ServicoDTO {


}
